--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@ footer{
   line-height: 120px;
   background-color: #848282;
 }
+
+.category {
+    display: none;
+  }
+  
+  .sidebar {
+    width: 100%;
+  }
